feat(order): update order logic to match Item model and add main for validation